[gd_scene load_steps=10 format=3 uid="uid://b8yi1hevqj4an"]

[ext_resource type="Script" uid="uid://dradmouhk4xym" path="res://scene/main_menu.gd" id="1_2fwvj"]
[ext_resource type="Theme" uid="uid://c21ro17htrkum" path="res://res/default_theme.tres" id="1_3er1b"]
[ext_resource type="LabelSettings" uid="uid://cty01tuoquvu8" path="res://res/score_label.tres" id="2_hxu56"]
[ext_resource type="Texture2D" uid="uid://c5xkecs5lelhp" path="res://res/icons/gear.png" id="4_0iwki"]
[ext_resource type="Script" uid="uid://dfnl32kjiinxj" path="res://scene/settings_window.gd" id="5_sepwh"]

[sub_resource type="LabelSettings" id="LabelSettings_m4svf"]
font_size = 64

[sub_resource type="Animation" id="Animation_0iwki"]
length = 0.666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UILayer/UI/Prompt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UILayer/UI/Prompt:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_2fwvj"]
resource_name = "prompt_blink"
length = 0.666
loop_mode = 1
step = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("UILayer/UI/Prompt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UILayer/UI/Prompt:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.313726)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0iwki"]
_data = {
&"RESET": SubResource("Animation_0iwki"),
&"prompt_blink": SubResource("Animation_2fwvj")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_2fwvj")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3er1b")

[node name="Title" type="Label" parent="UILayer/UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 288.0
grow_horizontal = 2
text = "Pong"
label_settings = ExtResource("2_hxu56")
horizontal_alignment = 1

[node name="Prompt" type="Label" parent="UILayer/UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
grow_horizontal = 2
grow_vertical = 0
text = "-- Press Any Key to Start --"
label_settings = SubResource("LabelSettings_m4svf")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Button" parent="UILayer/UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
icon = ExtResource("4_0iwki")

[node name="GameOverSettings" type="HBoxContainer" parent="UILayer/UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="BOSlider" type="HSlider" parent="UILayer/UI/MarginContainer/GameOverSettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 10.0
value = 2.0
rounded = true

[node name="BOLabel" type="Label" parent="UILayer/UI/MarginContainer/GameOverSettings"]
unique_name_in_owner = true
layout_mode = 2
text = "target score:"

[node name="ModeSelects" type="HBoxContainer" parent="UILayer/UI/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="ModePve" type="Button" parent="UILayer/UI/MarginContainer/ModeSelects"]
layout_mode = 2
text = "1 Player"

[node name="ModePvp" type="Button" parent="UILayer/UI/MarginContainer/ModeSelects"]
layout_mode = 2
text = "2 Players"

[node name="ModeEve" type="Button" parent="UILayer/UI/MarginContainer/ModeSelects"]
layout_mode = 2
text = "CPU vs CPU"

[node name="SettingsWindow" type="Window" parent="UILayer/UI/MarginContainer"]
unique_name_in_owner = true
title = "Settings"
initial_position = 4
size = Vector2i(800, 600)
visible = false
transient = true
min_size = Vector2i(400, 300)
script = ExtResource("5_sepwh")

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI/MarginContainer/SettingsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/MarginContainer/SettingsWindow/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="UILayer/UI/MarginContainer/SettingsWindow/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/UI/MarginContainer/SettingsWindow/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="UILayer/UI/MarginContainer/SettingsWindow/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 4
value = 50.0
rounded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0iwki")
}
autoplay = "prompt_blink"

[connection signal="pressed" from="UILayer/UI/MarginContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="value_changed" from="UILayer/UI/MarginContainer/GameOverSettings/BOSlider" to="." method="_on_bo_slider_value_changed"]
[connection signal="pressed" from="UILayer/UI/MarginContainer/ModeSelects/ModePve" to="." method="_on_mode_pve_pressed"]
[connection signal="pressed" from="UILayer/UI/MarginContainer/ModeSelects/ModePvp" to="." method="_on_mode_pvp_pressed"]
[connection signal="pressed" from="UILayer/UI/MarginContainer/ModeSelects/ModeEve" to="." method="_on_mode_eve_pressed"]
[connection signal="value_changed" from="UILayer/UI/MarginContainer/SettingsWindow/MarginContainer/VBoxContainer/HSplitContainer/VolumeSlider" to="UILayer/UI/MarginContainer/SettingsWindow" method="_on_volume_slider_value_changed"]
